# X-Ways-MCP

./: .env.template  .gitignore  .mcp.json  README.md  pyproject.toml
data/: forensic-best-practices.json
data/xwf-external-surface/: documented-xt-callbacks.csv  documented-xwf-functions.csv  xwf-21.8-api-cross-reference.csv  xwf-21.8-exported-api-cmdlets.csv  xwf-21.8-x64-exports.csv  xwf-21.8-x64-summary.json
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  EXTERNAL_SURFACE_ANALYSIS.md  FORENSIC_COPILOT.md  FORENSIC_SOUNDNESS.md  HEADLESS_XWAYS.md  INTEGRATION_CONTRACT.md  MANUAL_FIRST.md  PARALLEL_PROCESSING.md  TEST_ENVIRONMENTS.md  TOOLS.md  XTENSION_BRIDGE.md  XWF_API_CMDLETS.md
examples/: basic_triage.whs  case-run-manifest.template.json  forensic-copilot-flow.md
examples/powershell/: container-first-usage-analysis.ps1  external-surface-analysis.ps1  query-first-usage-analysis.ps1  xwf-api-bridge-request.ps1
powershell/XWaysForensicWorkflow/: XWaysForensicWorkflow.psd1  XWaysForensicWorkflow.psm1  XwfApiBridge.ps1  XwfExportedApiCmdlets.ps1  XwfExternalSurface.ps1
schemas/: case-run-manifest.schema.json
scripts/: Invoke-XwfCaseDbPathStringTriage.ps1  Invoke-XwfCaseDbUsageTriage.ps1  Invoke-XwfPathUsagePatternTriage.ps1  smoke_mcp.py
src/xways_mcp/: __init__.py  case_manifest.py  core.py  harness.py  manual.py  parallel.py  redaction.py  server.py  testenv.py  triage.py  xtension.py
tests/: test_core.py  test_external_surface.py  test_harness.py  test_manifest_contract.py  test_redaction.py  test_testenv.py  test_triage_wrappers.py
xtensions/xwf-path-export/: README.md  XwfPathExport.def  build.ps1  xwf_path_export.c
