[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "xways-mcp"
version = "0.1.0"
description = "Model Context Protocol server for X-Ways Forensics triage, installation validation, and controlled automation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "xways-mcp contributors" }
]
keywords = ["mcp", "x-ways", "forensics", "dfir", "triage"]
dependencies = [
  "mcp>=1.2.0,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
xways-mcp = "xways_mcp.server:main"
xways-harness = "xways_mcp.harness:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/xways_mcp"]
